--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    min-height: 100vh;
+    justify-content: center;
+    background-color: lightgray;
 }
 header, footer {
     background-color: #333;
@@ -13,3 +13,35 @@ header, footer {
     padding: 20px;
     text-align: center;
 }
+
+form {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    text-align: center;
+}
+
+p {
+    padding-left: 10px;
+}
+
+
+input[type="text"],
+input[type="password"],
+input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type="submit"] {
+    background-color: #333;
+    color: #fff;
+    cursor: pointer;
+}
+
+
