--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -92,6 +92,13 @@ input[type="submit"] {
 }
 
 
+.error404 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
 
 .rounded-image {
     border-radius: 30px;
@@ -128,4 +135,27 @@ input[type="submit"] {
         width: 50%;
     }
 
+}
+
+.btn {
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 18px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #fff;
+    background-color: #007bff;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+    background-color: #0056b3;
+}
+
+
+#cat_404 {
+    max-width: 80%;
+    max-height: 80%;
+    margin-bottom: 20px;
 }
