--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,8 +10,7 @@ body {
   font-size: 24px;
 }
 
-header,
-footer {
+header, footer {
   background-color: #333;
   color: #fff;
   padding: 20px;
@@ -41,9 +40,7 @@ p {
   padding-left: 10px;
 }
 
-input[type=text],
-input[type=password],
-input[type=submit] {
+input[type=text], input[type=password], input[type=submit] {
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
@@ -63,9 +60,9 @@ input[type=submit] {
 }
 
 .topnav a {
-  color: white;
+  color: #fff;
   text-decoration: none;
-  border: 1px solid white;
+  border: 1px solid #fff;
   padding: 5px 10px;
 }
 .topnav ul {
@@ -89,10 +86,6 @@ input[type=submit] {
   align-items: center;
 }
 
-.rounded-image {
-  border-radius: 30px;
-}
-
 @media only screen and (max-width: 768px) {
   .topnav li {
     display: block;
@@ -107,6 +100,7 @@ input[type=submit] {
   display: none;
   padding-right: 10px;
   padding-top: 10px;
+  border-radius: 30px;
 }
 
 @media only screen and (min-width: 1200px) {
@@ -129,9 +123,8 @@ input[type=submit] {
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
-
 .btn:hover {
-  background-color: #0056b3;
+  background-color: #0062cc;
 }
 
 #cat_404 {
