--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,7 +10,8 @@ body {
   font-size: 24px;
 }
 
-header, footer {
+header,
+footer {
   background-color: #333;
   color: #fff;
   padding: 20px;
@@ -24,6 +25,10 @@ footer {
 
 main {
   flex: 1;
+}
+
+.image {
+  border-radius: 30px;
 }
 
 #login-form {
@@ -40,7 +45,9 @@ p {
   padding-left: 10px;
 }
 
-input[type=text], input[type=password], input[type=submit] {
+input[type=text],
+input[type=password],
+input[type=submit] {
   width: 100%;
   padding: 10px;
   margin-bottom: 10px;
@@ -74,6 +81,27 @@ input[type=submit] {
   margin-right: 10px;
 }
 
+.btn {
+  display: inline-block;
+  padding: 15px 30px;
+  font-size: 18px;
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  background-color: #007bff;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+.btn:hover {
+  background-color: #0062cc;
+}
+
+#cat_404 {
+  max-width: 80%;
+  max-height: 80%;
+  margin-bottom: 20px;
+}
+
 .container {
   display: flex;
   flex-direction: row;
@@ -95,14 +123,10 @@ input[type=submit] {
   body {
     font-size: 20px;
   }
+  .image {
+    display: none;
+  }
 }
-.image {
-  display: none;
-  padding-right: 10px;
-  padding-top: 10px;
-  border-radius: 30px;
-}
-
 @media only screen and (min-width: 1200px) {
   body {
     font-size: 28px;
@@ -110,27 +134,9 @@ input[type=submit] {
   .image {
     display: block;
     width: 50%;
+    padding-right: 10px;
+    padding-top: 10px;
   }
-}
-.btn {
-  display: inline-block;
-  padding: 15px 30px;
-  font-size: 18px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #fff;
-  background-color: #007bff;
-  border-radius: 5px;
-  transition: background-color 0.3s ease;
-}
-.btn:hover {
-  background-color: #0062cc;
-}
-
-#cat_404 {
-  max-width: 80%;
-  max-height: 80%;
-  margin-bottom: 20px;
 }
 
 /*# sourceMappingURL=main.css.map */
