--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7,14 +7,13 @@ body {
   justify-content: center;
   background-color: lightgray;
   min-height: 100vh;
-  font-size: 24px;
+  font-size: 20px;
 }
 
 header,
 footer {
   background-color: #333;
   color: #fff;
-  padding: 20px;
   display: flex;
   justify-content: space-between;
 }
@@ -24,7 +23,8 @@ footer {
 }
 
 main {
-  flex: 1;
+  display: flex;
+  align-items: center;
 }
 
 .image {
@@ -97,21 +97,17 @@ input[type=submit] {
 }
 
 #cat_404 {
-  max-width: 80%;
-  max-height: 80%;
-  margin-bottom: 20px;
+  width: 30%;
+  height: 30%;
+  margin: 20px;
 }
 
-.container {
-  display: flex;
+.flex_dir_row {
   flex-direction: row;
-  align-items: center;
 }
 
-.error404 {
-  display: flex;
+.flex_dir_column {
   flex-direction: column;
-  align-items: center;
 }
 
 @media only screen and (max-width: 768px) {
@@ -120,16 +116,13 @@ input[type=submit] {
     margin-bottom: 10px;
     padding: 5px;
   }
-  body {
-    font-size: 20px;
-  }
   .image {
     display: none;
   }
 }
 @media only screen and (min-width: 1200px) {
   body {
-    font-size: 28px;
+    font-size: 24px;
   }
   .image {
     display: block;
