--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -2,7 +2,7 @@
 $primary-color: #333;
 $secondary-color: #fff;
 $font-stack: Arial, sans-serif;
-$base-font-size: 24px;
+$base-font-size: 20px;
 $link-color: blue;
 $error-color: red;
 $breakpoint-small: 768px;
@@ -56,7 +56,6 @@ header,
 footer {
     background-color: $primary-color;
     color: $secondary-color;
-    padding: 20px;
     display: flex;
     justify-content: space-between;
 }
@@ -65,9 +64,12 @@ footer {
     margin-top: auto;
 }
 
+
 main {
-    flex: 1;
+    display: flex;
+    align-items: center;
 }
+
 
 .image {
     border-radius: 30px;
@@ -134,25 +136,18 @@ input[type="submit"] {
 }
 
 #cat_404 {
-    max-width: 80%;
-    max-height: 80%;
-    margin-bottom: 20px;
+    width: 30%;
+    height: 30%;
+    margin: 20px;
 }
 
 
-
-
-
-.container {
-    display: flex;
+.flex_dir_row {
     flex-direction: row;
-    align-items: center;
 }
 
-.error404 {
-    display: flex;
+.flex_dir_column {
     flex-direction: column;
-    align-items: center;
 }
 
 
@@ -166,10 +161,6 @@ input[type="submit"] {
         }
     }
 
-    body {
-        font-size: 20px;
-    }
-
     .image {
         display: none;
     }
@@ -180,9 +171,8 @@ input[type="submit"] {
 
 @include respond-to(large) {
     body {
-        font-size: 28px;
+        font-size: 24px;
     }
-
 
     .image {
         display: block;
