--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,4 +1,4 @@
-<main>
+<main class="flex_dir_column">
     <p>Have a question or just want to say hello? Feel free to get in touch with me!</p>
     <p>You can reach me via email or on Github.</p>
     <ul>
