Update project structure

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,6 +8,6 @@
         contribute to it.</p>
     <p>This site will be continuously evolving and improving as I expand my expertise and acquire new skills. I
         invite you to explore and learn more about the various technologies and concepts I am exploring here. If you
-        have any questions or just want to say hello, feel free to <a href="contact.html">contact me</a>.</p>
+        have any questions or just want to say hello, feel free to <a href="/contact">contact me</a>.</p>
     <p>Thank you for visiting and showing interest in my learning project!</p>
 </main>
