--- a/public/styles/scss/_variables.scss
+++ b/public/styles/scss/_variables.scss
@@ -11,7 +11,7 @@ $breakpoint-large: 1100px;
 // New variables for to-do list
 $todo-bg-color: #eaf6ff;
 $priority-colors: (
-    "important": #ffcccc,
-    "normal": #ffcc99,
-    "low": #cce6ff
+    "high": #f70000,
+    "normal": #ffd000,
+    "low": #01aeff
 );
