--- a/public/styles/scss/_tasks.scss
+++ b/public/styles/scss/_tasks.scss
@@ -1,3 +1,9 @@
+main {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
 h2 {
     text-align: center;
     margin-bottom: 20px;
