--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -6,7 +6,7 @@
         <option value="normal" selected>Normal</option>
         <option value="high">High</option>
     </select>
-    <button onclick="addTask()">Add Task</button>
+    <button id='add-task-btn' onclick="addTask()">Add Task</button>
     <table id="todoTable">
         <tr>
             <th>Task</th>
@@ -15,7 +15,8 @@
             <th>Done</th>
         </tr>
         <% tasks.forEach((task, index)=> { %>
-            <tr class="<%= task.done ? 'done' : 'not-done-' + task.priority %>">
+            <tr id="task-row-<%= index %>" class="<%= task.done ? 'done' : 'not-done-' + task.priority %>"
+                data-priority="<%= task.priority %>">
                 <td>
                     <%= task.task %>
                 </td>
@@ -29,5 +30,18 @@
             </tr>
             <% }); %>
     </table>
-
 </main>
+
+<script>
+    function toggleTask(index) {
+        const taskRow = document.getElementById(`task-row-${index}`);
+        taskRow.classList.toggle('done');
+
+        if (taskRow.classList.contains('done')) {
+            taskRow.classList.remove('not-done-high', 'not-done-normal', 'not-done-low');
+        } else {
+            const priority = taskRow.getAttribute('data-priority');
+            taskRow.classList.add(`not-done-${priority}`);
+        }
+    }
+</script>
