--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -153,16 +153,14 @@ h2 {
 
 #taskInput,
 #priorityInput {
-  width: 70%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
-}
-
-#taskInput {
-  width: 70%;
 }
 
 table {
