--- a/views/main.ejs
+++ b/views/main.ejs
@@ -24,7 +24,7 @@
         </nav>
     </header>
 
-    <%- include(main) %>
+    <%- include(content) %>
 
         <footer>
             <p>Made with love in Berlin</p>
