--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<main>
+<main class="content-container">
     <form id="login-form" action="/login" method="POST">
         <h2>Login</h2>
 
@@ -11,6 +11,7 @@
         <hr>
         <a id="register-link" href="#register">Create new account</a>
     </form>
+
     <img class="image" src="images/todo_list.jpg" class="rounded-image"
         alt="A table on which there are plants, paper clips, a clipboard, an alarm clock and a ballpoint pen.">
 </main>
