--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -18,10 +18,10 @@
             <tr id="task-row-<%= index %>" class="<%= task.done ? 'done' : 'not-done-' + task.priority %>"
                 data-priority="<%= task.priority %>">
                 <td>
-                    <%= task.task %>
+                    <%= task.title %>
                 </td>
                 <td>
-                    <%= task.date %>
+                    <%= task.dateAdded %>
                 </td>
                 <td>
                     <%= task.priority %>
@@ -32,5 +32,6 @@
             <% }); %>
     </table>
 </main>
+
 
 <script src="js/tasks.js"></script>
