--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,17 +1,30 @@
 <main class="content-container">
-    <form id="login-form" action="/login" method="POST">
+    <form id="loginForm" action="/login" method="POST">
         <h2>Login</h2>
-
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password"><br><br>
-
-        <input type="submit" value="Login">
+        <input type="text" id="username" name="username" placeholder="Username">
+        <input type="password" id="password" name="password" placeholder="Password">
+        <button type="submit" class="loginBtn">Log In</button>
         <hr>
-        <a id="register-link" href="#register">Create new account</a>
+        <button id="registerBtn" class="registerBtn">Create new account</button>
     </form>
 
     <img class="image" src="images/todo_list.jpg" class="rounded-image"
         alt="A table on which there are plants, paper clips, a clipboard, an alarm clock and a ballpoint pen.">
+
 </main>
+
+<div id="registerBox" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Register</h2>
+        <form id="registerForm">
+            <input type="text" id="username" name="username" placeholder="Username">
+            <input type="password" id="password" name="password" placeholder="Password">
+            <button id="signUpBtn">Sign Up</button>
+        </form>
+    </div>
+</div>
+
+
+
+<script type="module" src="js/registerBox.js"></script>
