Improve blur effect

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,7 +18,7 @@
 <div id="registerBox" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Register</h2>
+        <h2>Create new account</h2>
         <form id="registerForm">
             <input type="text" id="registerUsername" name="username" placeholder="Username">
             <input type="password" id="registerPassword" name="password" placeholder="Password">
