Disable register button if credential validation fails

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -45,7 +45,7 @@
             <input type="text" id="registerUsername" name="username" placeholder="Username">
             <div id="passwordFeedback"></div>
             <input type="password" id="registerPassword" name="password" placeholder="Password">
-            <button id="signUpBtn">Sign Up</button>
+            <button id="signUpBtn" disabled>Sign Up</button>
     </div>
 
     </form>
