--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -2,17 +2,18 @@
     <h2>To-Do List</h2>
     <input type="text" id="taskInput" placeholder="Enter task...">
     <select id="priorityInput">
-        <option value="low">Low</option>
-        <option value="normal" selected>Normal</option>
-        <option value="high">High</option>
+        <option value="Low">Low</option>
+        <option value="Medium" selected>Medium</option>
+        <option value="High">High</option>
     </select>
     <button id='add-task-btn' onclick="addTask()">Add Task</button>
     <table id="todoTable">
         <tr>
-            <th>Task</th>
-            <th>Date Added</th>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Due Date</th>
             <th>Priority</th>
-            <th>Done</th>
+            <th>Completed</th>
         </tr>
         <% tasks.forEach((task, index)=> { %>
             <tr onclick="editTask('<%= task._id %>')" id="task-row-<%= index %>"
@@ -21,7 +22,10 @@
                     <%= task.title %>
                 </td>
                 <td>
-                    <%= task.dateAdded %>
+                    <%= task.description %>
+                </td>
+                <td>
+                    <%= task.dueDate %>
                 </td>
                 <td>
                     <%= task.priority %>
@@ -32,6 +36,6 @@
             <% }); %>
     </table>
 
-</main>
+    <script src="/js/task.js"></script>
 
-<script type="module" src="js/tasks.js"></script>
+</main>
