--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -72,7 +72,7 @@ footer {
     padding: 10px;
   }
 }
-#signUpBtn, .registerBtn, #loginBtn, #homeBtn {
+#loginForm #loginBtn, #signUpBtn, .registerBtn, #homeBtn {
   color: white;
   padding: 15px 20px;
   border: none;
@@ -93,17 +93,6 @@ footer {
 }
 #homeBtn:active {
   background-color: #085608;
-}
-
-#loginBtn {
-  background-color: #808080;
-  width: 100%;
-}
-#loginBtn:hover {
-  background-color: #696969;
-}
-#loginBtn:active {
-  background-color: #505050;
 }
 
 .registerBtn {
@@ -160,14 +149,24 @@ hr {
   text-align: center;
 }
 #loginForm input[type=text],
-#loginForm input[type=password],
-#loginForm input[type=submit] {
+#loginForm input[type=password] {
   width: 100%;
   padding: 10px;
-  margin-bottom: 10px;
+  margin-top: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+}
+#loginForm #loginBtn {
+  background-color: #808080;
+  width: 100%;
+  margin-top: 10px;
+}
+#loginForm #loginBtn:hover {
+  background-color: #696969;
+}
+#loginForm #loginBtn:active {
+  background-color: #505050;
 }
 
 #cat_404 {
